# Setup for the NimbeLink base package
#
# (C) NimbeLink Corp. 2021
#
# All rights reserved except as explicitly granted in the license agreement
# between NimbeLink Corp. and the designated licensee. No other use or disclosure
# of this software is permitted. Portions of this software may be subject to third
# party license terms as specified in this software, and such portions are
# excluded from the preceding copyright notice of NimbeLink Corp.

[metadata]
name = pynl-base
version = 1.0.4
description = NimbeLink library base
license = (C) NimbeLink Corp. 2021
author = Erik Johnson
author-email = erik.johnson@nimbelink.com
home-page = https://github.com/NimbeLink/pynl-base

[options]
packages = find_namespace:
install_requires =
    diskcache
    pynrfjprog
    pyserial >= 3.4
    PyYAML >= 5.3
    requests

[options.entry_points]
console_scripts =
    nimbelink = nimbelink.__main__:main
pynl.commands =
    version =  nimbelink.git.version.__cmd__:VersionCommand
    cache = nimbelink.cache.__cmd__:CacheCommand
